--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
 
     <groupId>com.datastax.cassandra</groupId>
     <artifactId>cassandra-driver-parent</artifactId>
-    <version>3.0.4</version>
+    <version>3.0.4.01</version>
     <packaging>pom</packaging>
     <name>DataStax Java Driver for Apache Cassandra</name>
     <description>A driver for Apache Cassandra 1.2+ that works exclusively with the Cassandra Query Language version 3
@@ -440,4 +440,16 @@
             <organization>DataStax</organization>
         </developer>
     </developers>
+
+
+    <distributionManagement>
+        <repository>
+            <id>releases</id>
+            <url>https://nexus.wealthport.com/repository/maven-releases</url>
+        </repository>
+        <snapshotRepository>
+            <id>snapshots</id>
+            <url>https://nexus.wealthport.com/repository/maven-snapshots</url>
+        </snapshotRepository>
+    </distributionManagement>
 </project>
